# stellarflow

./: LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
stellarflow/: stellarflow.py
tests/: test_detrend.py
