[tool.poetry]
name = "stellarflow"
version = "0.1.0"
description = ""
authors = ["iadyo <iamadyoo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "stellarflow/" }]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
lightkurve = "^2.4.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
mypy = "^1.8.0"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
